# ARP-Cache-CNC

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DOCKER_SETUP.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFERENCE.md  SETUP.md  docker-compose.yml  project_config.yaml  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container.yml
analysis/: dashboard_enhanced.py
analysis/frontend/: _arp_dashboard_patched.py  arp_dashboard.py  arp_loader.py  simple_dash.py
analysis/templates/: dashboard_enhanced.html
arp_poisoner/: __init__.py  attack.py
dashboard/: __init__.py  app.py
dashboard/static/: style.css
dashboard/templates/: dashboard.html
data/archived_experiments/: README.md  attack_data_20250915_183053.json  attack_data_20250915_183210.json  attack_data_20250915_183236.json  attack_data_20250915_183603.json  attack_data_20250915_183646.json  attack_data_20250915_183807.json  attack_data_20250916_143232.json  attack_data_20250916_143332.json  attack_data_20250916_143403.json  attack_data_20250916_143431.json  attack_data_20250916_143547.json  attack_data_20250916_144354.json  attack_data_20250917_104620.json  attack_data_20250917_121751.json  attack_stats_20250915_123006.json  attack_stats_20250915_123028.json  attack_stats_20250915_123053.json  experiment_20250915_095416.json  experiment_20250915_100108.csv  experiment_20250915_100108.json  experiment_20250915_100409.csv  experiment_20250915_100409.json  experiment_20250915_110711.csv  experiment_20250915_110711.json  experiment_20250915_114605.csv  experiment_20250915_114605.json  experiment_20250915_121335.csv  experiment_20250915_121335.json  experiment_20250915_121516.csv  experiment_20250915_121516.json  experiment_20250915_131959.csv  experiment_20250915_131959.json  experiment_20250916_144023.csv  experiment_20250916_144023.json  experiment_20250916_145100.csv  experiment_20250916_145100.json  experiment_data.json
docs/: ARCHITECTURE.md  CONTAINER.md  EXPERIMENT.md  EXPERIMENT_REPORT.md  GETTING_STARTED.md  INTEGRATION.md
infrastructure/arp-labsetup/: docker-compose.yml
packet_manipulator/: __init__.py  gcode_modifier.py  sniffer.py  spoofer.py
scenarios/: __init__.py  attack_simulator_advanced.py  complete_experiment.py  direct_interceptor.py  gcode_modifier.py  research_framework.py  research_scenarios.py
scripts/: README.md  query_status.py
templates/: dashboard.html  dashboard_enhanced.html
tests/: smoke_test.py  test_basics.py
(+33 files in other folders)
