[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arp-cache-cnc"
version = "1.0.0"
description = "Advanced CNC security research platform with network interception and G-code attack simulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "University of Rhode Island, Industrial Systems Engineering"}
]
keywords = ["security", "research", "cnc", "arp", "network", "attack-simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "scapy>=2.4.5",
    "pyshark>=0.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "dash>=2.0.0",
    "plotly>=5.3.0",
    "flask>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.33.0",
    "cryptography>=3.4.0",
    "pycryptodome>=3.15.0",
    "sqlalchemy>=1.4.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "requests>=2.26.0",
    "websocket-client>=1.2.0",
    "pyyaml>=5.4.0",
    "python-dotenv>=0.19.0",
    "colorama>=0.4.4",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/uri-ise/ARP-Cache-CNC"
Documentation = "https://github.com/uri-ise/ARP-Cache-CNC/blob/main/README.md"
Repository = "https://github.com/uri-ise/ARP-Cache-CNC.git"
Issues = "https://github.com/uri-ise/ARP-Cache-CNC/issues"

[tool.setuptools]
packages = ["analysis", "scenarios"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --tb=short"
norecursedirs = "smoke_test.py"

[tool.coverage.run]
source = ["analysis", "scenarios"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
